Riscritto le routes e aggiunto middleware
